tests/negative/MicroJuvix/WrongReturnTypeTooFewArguments.mjuvix
module WrongReturnTypeTooFewArguments;

inductive A (B : Type) {
c : A;
};

end;
